fix overlapping search on litebrand design

--- a/style.css
+++ b/style.css
@@ -63,13 +63,11 @@ Sections here:
 	box-shadow: -3px 1px 2px rgba(0, 32, 63, 0.4), 3px 1px 2px rgba(0, 32, 63, 0.4);
 	
 }
-
-.header-search form {
-	float: right;
+.header-search{
+	margin-top: 0.66667em;
 }
-.header-search fieldset {white-space:nowrap;}
-
-
+.header-search fieldset {
+	white-space:nowrap;}
 #main-nav-wrap {
 	background: #003d79 url(/g/2/i/headbgwide.jpg) 0 -20px repeat-x;
 	border-bottom: 2px solid #002d3f;
@@ -196,6 +194,18 @@ a#bc-logo:focus {
 	#nav-top {
 		position: absolute !important;
 		left: -9999999px !important;
+	}
+}
+@media screen and (min-width: 50em) {
+	#site-header > .content-padding { position: relative}
+	.header-search{
+		position: absolute;
+		right: 0;
+		top: 0;
+		margin-top: 0.3333333em;
+	}
+	.header-search-w-description {
+		margin-top: 1em;
 	}
 }
 @media screen and (min-width: 41em) {
